[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Alok Singh <alokbeniwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
einops = "^0.6.0"
bidict = "^0.22.1"

jaxtyping = "^0.2.14"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
